# Student-Management-System

./: CMakeLists.txt  README.md  build.bat  run.bat
include/: Class.hpp  Head.hpp  Include.hpp  Menu.hpp  Student_callback.hpp  sqlite3cpp.hpp
sqlite/: CMakeLists.txt  build.bat
sqlite/src/: demo.cpp  learn.txt  main.cpp  sqlite3cpp.cpp  sqlite3cpp.hpp
src/: class.cpp  head.cpp  main.cpp  menu.cpp  student_callback.cpp
